sonarqube used on controller, datasource, and model packages